--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ html{
 .wrapper-left__image {
     width: 200px;
     height: 200px;
-    background: url(../img/personal2.jpg)-62px -5px no-repeat;
+    background: url(../img/arduino.jpg)-62px -5px no-repeat;
     border-radius: 50%;
     margin-bottom: 48px;
 }
